@@ -49,3 +49,4 @@ Thanks
   * Yoshinao Muramatsu: win32 surface support patch.
   * NANKI Haruo: some bug fix patches.
   * Paul van Tilburg: some patches that support ruby 1.9.
+  * Binzo: a bug report.
